--- a/src/scss/_template.scss
+++ b/src/scss/_template.scss
@@ -26,7 +26,7 @@ ul.inline-list.right a:hover {
 }
 
 h1 {
-  font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
+  //font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
   font-size: 32px;
   color: #fff;
   line-height: 28px;
@@ -36,14 +36,14 @@ h1 {
 }
 
 h2 {
-  font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
+  //font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
   color: #fff;
   font-size: 36px;
   line-height: 34px;
 }
 
 h3 {
-  font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
+  //font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
   font-size: 24px;
   color: #fff;
   line-height: 10px;
@@ -53,7 +53,7 @@ h3 {
 }
 
 h4 {
-  font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
+  //font-family: 'American Typewriter', 'Courier New', Courier, Monaco, mono;
   color: #000;
   font-size: 28px;
   padding-top: 5px;
