--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -170,18 +170,27 @@ body {
 
 .main-wrapper h1 {
   font-family: 'Sacramento', cursive;
-  padding-bottom: 45px;
-  padding-top: 35px;
+  padding-bottom: 15px;
+  padding-top: 15px;
   font-size: 72px;
   line-height: 1.48em; }
 .main-wrapper .button {
   font-family: 'Asap', sans-serif; }
+  .main-wrapper .button:hover, .main-wrapper .button:visited {
+    background-color: rgba(174, 213, 129, 0.55); }
 
 #image {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url("../img/quilt4-min.jpg");
+  background-image: url("../img/quilt4-min.webp");
+  background-size: cover; }
+
+#mobile-image {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/quilt4-mobile-crop.jpeg");
   background-size: cover; }
 
 #content {
